# theinterface

./: .gitignore  LICENSE  NOTICE  README.md  meson.build
include/: cursor.h  cursor.hpp  desktop.hpp  keyboard.hpp  layer_shell.hpp  output.hpp  render.hpp  seat.hpp  server.h  server.hpp  util.hpp  view.hpp  wlroots.hpp  xdg_shell.h  xdg_shell.hpp  xwayland.hpp
interface/: main.c  meson.build
protocol/: .gitignore  gtk-shell.xml  meson.build  wlr-layer-shell-unstable-v1.xml
theinterface/: cursor.cpp  desktop.cpp  keyboard.c  keyboard.cpp  layer_shell.cpp  main.c  main.cpp  meson.build  output.cpp  render.cpp  seat.cpp  server.cpp  util.cpp  view.cpp  xdg_shell.c  xdg_shell.cpp  xwayland.cpp
